Design: set initial setting of css

--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
         body {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+        }
+
+        a {
+            color: inherit;
+            text-decoration: none;
+        }
+
+        li {
+            list-style: none;
+        }
+
+        input:focus {
+            outline: none;
         }
 
         #head {
@@ -178,12 +192,9 @@
                                         </button>
                                     </div>
                                 </div>
-
                             </div>
                         </div>
-
                     </div>
-
                 </div>
             </div>
 
@@ -192,7 +203,7 @@
             <div style="z-index: 1; height: 80px;" class="display-flex flex-vertical-row-align">
                 <div style="padding: 12px;">
                     <a href="https://www.airbnb.co.kr/host/homes">
-                        <strong>당신의 공간을 에어비엔비하세요</strong>
+                        <span>당신의 공간을 에어비엔비하세요</span>
                     </a>
 
                 </div>
