Fix: margin of nav item's frame

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                         <img src="https://a0.muscache.com/pictures/3b1eb541-46d9-4bef-abc4-c37d77e3c21b.jpg" alt=""
                             width="24" height="24">
                     </div>
-                    <div style="width: auto; height: 26px;">
+                    <div>
                         <span>최고의 전망</span>
                     </div>
                     
