Design: filter button

--- a/index.html
+++ b/index.html
@@ -212,452 +212,21 @@
 
     <!-- 2번째 div -->
     <div style="padding: 12px 40px 0px 40px;">
-        <div style="height: 78px;" class="flex-vertical-row-align flex-grow-shrink-10">
-            <nav style="font-size: 12px; font-weight: 600;" class="space-between">
-                <div class="nav-item-frame">
-                    <div>
-                        <img src="https://a0.muscache.com/pictures/3b1eb541-46d9-4bef-abc4-c37d77e3c21b.jpg" alt=""
-                            width="24" height="24">
+        <div style="height: 78px; width: 100%;" class="flex-vertical-row-align">
+
+            <div>
+                <button style="padding: 12px 0px;" class="filter-button">
+                    <div style="padding: 2px 16px 0px 16px; column-gap: 8px;" class="display-flex">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"
+                            style="display:block;fill:none;height:16px;width:16px;stroke:currentColor;stroke-width:3;overflow:visible"
+                            aria-hidden="true" role="presentation" focusable="false">
+                            <path fill="none"
+                                d="M7 16H3m26 0H15M29 6h-4m-8 0H3m26 20h-4M7 16a4 4 0 1 0 8 0 4 4 0 0 0-8 0zM17 6a4 4 0 1 0 8 0 4 4 0 0 0-8 0zm0 20a4 4 0 1 0 8 0 4 4 0 0 0-8 0zm0 0H3">
+                            </path>
+                        </svg>
+                        <span class="filter-text">필터</span>
                     </div>
-                    <div>
-                        <span>최고의 전망</span>
-                    </div>
-                    
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-                        <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
-                            src="https://a0.muscache.com/pictures/3271df99-f071-4ecf-9128-eb2d2b1f50f0.jpg" alt=""
-                            width="24" height="24">
-                    </div>
-                    <span>초소형 주택</span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-                        <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
-                            src="https://a0.muscache.com/pictures/10ce1091-c854-40f3-a2fb-defc2995bcaf.jpg" alt=""
-                            width="24" height="24">
-                    </div>
-                    <span>해변 근처</span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-                        <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
-                            src="https://a0.muscache.com/pictures/aaa02c2d-9f0d-4c41-878a-68c12ec6c6bd.jpg" alt=""
-                            width="24" height="24">
-                    </div>
-                    <span>농장</span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-                        <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
-                            src="https://a0.muscache.com/pictures/c8bba3ed-34c0-464a-8e6e-27574d20e4d2.jpg" alt=""
-                            width="24" height="24">
-                    </div>
-                    <span>스키</span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-                        <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
-                            src="https://a0.muscache.com/pictures/7630c83f-96a8-4232-9a10-0398661e2e6f.jpg" alt=""
-                            width="24" height="24">
-                    </div>
-                    <span>방</span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-                        <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
-                            src="https://a0.muscache.com/pictures/51f5cf64-5821-400c-8033-8a10c7787d69.jpg" alt=""
-                            width="24" height="24">
-                    </div>
-                    <span>한옥</span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-                <div class="nav-item-frame">
-                    <div>
-
-                    </div>
-                    <span></span>
-                </div>
-
-
-
-
-
-
-
-
-            </nav>
-            <div class="flex-vertical-row-align flex-grow-shrink-00">
-                <div>
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"
-                        style="display:block;fill:none;height:16px;width:16px;stroke:currentColor;stroke-width:3;overflow:visible"
-                        aria-hidden="true" role="presentation" focusable="false">
-                        <path fill="none"
-                            d="M7 16H3m26 0H15M29 6h-4m-8 0H3m26 20h-4M7 16a4 4 0 1 0 8 0 4 4 0 0 0-8 0zM17 6a4 4 0 1 0 8 0 4 4 0 0 0-8 0zm0 20a4 4 0 1 0 8 0 4 4 0 0 0-8 0zm0 0H3">
-                        </path>
-                    </svg>
-                </div>
-                <div>
-                    <span>필터</span>
-                </div>
-
+                </button>
             </div>
         </div>
 
@@ -673,3 +242,131 @@
 </body>
 
 </html>
+
+<!-- <div class="nav-item-frame">
+    <div>
+        <img src="https://a0.muscache.com/pictures/3b1eb541-46d9-4bef-abc4-c37d77e3c21b.jpg" alt=""
+            width="24" height="24">
+    </div>
+    <div>
+        <span>최고의 전망</span>
+    </div>
+    
+</div>
+
+<div class="nav-item-frame">
+    <div>
+        <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
+            src="https://a0.muscache.com/pictures/3271df99-f071-4ecf-9128-eb2d2b1f50f0.jpg" alt=""
+            width="24" height="24">
+    </div>
+    <span>초소형 주택</span>
+</div>
+
+<div class="nav-item-frame">
+    <div>
+        <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
+            src="https://a0.muscache.com/pictures/10ce1091-c854-40f3-a2fb-defc2995bcaf.jpg" alt=""
+            width="24" height="24">
+    </div>
+    <span>해변 근처</span>
+</div>
+
+<div class="nav-item-frame">
+    <div>
+        <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
+            src="https://a0.muscache.com/pictures/aaa02c2d-9f0d-4c41-878a-68c12ec6c6bd.jpg" alt=""
+            width="24" height="24">
+    </div>
+    <span>농장</span>
+</div>
+
+<div class="nav-item-frame">
+    <div>
+        <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
+            src="https://a0.muscache.com/pictures/c8bba3ed-34c0-464a-8e6e-27574d20e4d2.jpg" alt=""
+            width="24" height="24">
+    </div>
+    <span>스키</span>
+</div>
+
+<div class="nav-item-frame">
+    <div>
+        <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
+            src="https://a0.muscache.com/pictures/7630c83f-96a8-4232-9a10-0398661e2e6f.jpg" alt=""
+            width="24" height="24">
+    </div>
+    <span>방</span>
+</div>
+
+<div class="nav-item-frame">
+    <div>
+        <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
+            src="https://a0.muscache.com/pictures/51f5cf64-5821-400c-8033-8a10c7787d69.jpg" alt=""
+            width="24" height="24">
+    </div>
+    <span>한옥</span>
+</div>
+
+<div class="nav-item-frame">
+    <div>
+        <img src="https://a0.muscache.com/pictures/ca25c7f3-0d1f-432b-9efa-b9f5dc6d8770.jpg" alt="" width="24" height="24">
+    </div>
+    <span>캠핑장</span>
+</div>
+
+<div class="nav-item-frame">
+    <div>
+        <img src="https://a0.muscache.com/pictures/c0a24c04-ce1f-490c-833f-987613930eca.jpg" alt="" width="24" height="24">
+    </div>
+    <span>국립공원</span>
+</div>
+
+<div class="nav-item-frame">
+    <div>
+        <img src="https://a0.muscache.com/pictures/3726d94b-534a-42b8-bca0-a0304d912260.jpg" alt="" width="24" height="24">
+    </div>
+    <span>인기 급상승</span>
+</div>
+
+<div class="nav-item-frame">
+    <div>
+        <img src="https://a0.muscache.com/pictures/957f8022-dfd7-426c-99fd-77ed792f6d7a.jpg" alt="" width="24" height="24">
+    </div>
+    <span>서핑</span>
+</div>
+
+<div class="nav-item-frame">
+    <div>
+        <img src="https://a0.muscache.com/pictures/687a8682-68b3-4f21-8d71-3c3aef6c1110.jpg" alt="" width="24" height="24">
+    </div>
+    <span>보트</span>
+</div>
+
+<div class="nav-item-frame">
+    <div>
+        <img src="https://a0.muscache.com/pictures/7ff6e4a1-51b4-4671-bc9a-6f523f196c61.jpg" alt="" width="24" height="24">
+    </div>
+    <span>리아드</span>
+</div>
+
+<div class="nav-item-frame">
+    <div>
+        <img src="https://a0.muscache.com/pictures/d721318f-4752-417d-b4fa-77da3cbc3269.jpg" alt="" width="24" height="24">
+    </div>
+    <span>타워</span>
+</div>
+
+<div class="nav-item-frame">
+    <div>
+        <img src="https://a0.muscache.com/pictures/8eccb972-4bd6-43c5-ac83-27822c0d3dcd.jpg" alt="" width="24" height="24">
+    </div>
+    <span>그랜드 피아노</span>
+</div>
+
+<div class="nav-item-frame">
+    <div>
+        <img src="https://a0.muscache.com/pictures/e4b12c1b-409b-4cb6-a674-7c1284449f6e.jpg" alt="" width="24" height="24">
+    </div>
+    <span>키클라데스 주택</span>
+</div> -->
